--- a/index.html
+++ b/index.html
@@ -8,25 +8,53 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/menu.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header class="header">
+        <div class="container">
+            <a href="#"">
+                <h1 class="logo">Cafe gamma</h1>
+            </a>
 
+            <nav>
+
+                <input type="checkbox" id="menu-hamburguer">
+
+                <label for="menu-hamburguer">
+                    <div class="menu">
+                        <span class="hamburguer"></span>
+                    </div>
+                </label>
+                
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sobre">Sobre nos</a></li>
+                    <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
+        <div class="container-hero"></div>
+    </section>
+
+    <section class="about" id="sobre"></section>
 
     </section>
 
-    <section class="about">
+    <section class="gallery" id="galeria">
 
     </section>
 
-    <section class="gallery">
-
-    </section>
-
-    <section class="services">
+    <section class="services" id="servicos">
 
     </section>
 
@@ -34,7 +62,7 @@
 
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="contato">
 
     </footer>
 </body>
