section hero agregada

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <header class="header">
         <div class="container">
             <a href="#"">
-                <h1 class="logo">Cafe gamma</h1>
+                <h1 class="logo">Cafegamma</h1>
             </a>
 
             <nav>
-
                 <input type="checkbox" id="menu-hamburguer">
 
                 <label for="menu-hamburguer">
@@ -32,7 +31,7 @@
                 </label>
                 
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#home" id="home">Home</a></li>
                     <li><a href="#sobre">Sobre nos</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#servicos">Serviços</a></li>
@@ -43,7 +42,14 @@
     </header>
 
     <section class="hero" id="home">
-        <div class="container-hero"></div>
+        <div class="container-hero">
+            <div class="texto">
+                <h2>Outstanding</h2>
+                <h2>Coffee Shop</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour...</p>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
     </section>
 
     <section class="about" id="sobre"></section>
