--- a/index.html
+++ b/index.html
@@ -52,7 +52,21 @@
         </div>
     </section>
 
-    <section class="about" id="sobre"></section>
+    <section class="about" id="sobre">
+        <div class="container">
+            <div class="informacoes">
+                <h1>Sobre Nos</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo pariatur recusandae expedita corporis totam ad iusto fuga harum omnis incidunt. Rem tempora commodi assumenda est consequuntur soluta saepe omnis dolorum?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quisquam culpa assumenda harum ipsam sint quam incidunt fugiat architecto! Blanditiis qui in vel ullam! Magni maiores aperiam earum sunt quo!</p>
+
+                <a href="#">Learn More</a>
+            </div>
+
+            <div class="image">
+                <img src="src/images/about-img.png" alt="sobre nos">
+            </div>
+        </div>
+    </section>
 
     </section>
 
