section gallery completada

--- a/index.html
+++ b/index.html
@@ -55,23 +55,63 @@
     <section class="about" id="sobre">
         <div class="container">
             <div class="informacoes">
-                <h1>Sobre Nos</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo pariatur recusandae expedita corporis totam ad iusto fuga harum omnis incidunt. Rem tempora commodi assumenda est consequuntur soluta saepe omnis dolorum?</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quisquam culpa assumenda harum ipsam sint quam incidunt fugiat architecto! Blanditiis qui in vel ullam! Magni maiores aperiam earum sunt quo!</p>
+                <h1 class="item1">Sobre Nos</h1>
+                <p class="item2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo pariatur recusandae expedita corporis totam ad iusto fuga harum omnis incidunt. Rem tempora commodi assumenda est consequuntur soluta saepe omnis dolorum?</p>
+                <p class="item3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo quisquam culpa assumenda harum ipsam sint quam incidunt fugiat architecto! Blanditiis qui in vel ullam! Magni maiores aperiam earum sunt quo!</p>
 
-                <a href="#">Learn More</a>
+                <a href="#"  class="item4">Learn More</a>
             </div>
 
-            <div class="image">
+            <div class="image item5">
                 <img src="src/images/about-img.png" alt="sobre nos">
             </div>
         </div>
     </section>
 
-    </section>
-
     <section class="gallery" id="galeria">
+        <div class="container">
+            <div class="informacoes-grid">
+                <h2>Nossa galeria</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quam tempore quas ad obcaecati maxime deleniti sed similique, ab cupiditate distinctio, vero mollitia quisquam dolorem at soluta debitis vel sapiente?</p>
+            </div>
+            <div class="foto1">
+                <!-- <img src="src/images/img-1.png" alt="foto 1"> -->
+            </div>
 
+            <div class="foto2">
+                <!-- <img src="src/images/img-2.png" alt="foto 2"> -->
+            </div>
+
+            <div class="foto3">
+                <!-- <img src="src/images/img-3.png" alt="foto 3"> -->
+            </div>
+
+            <div class="foto4">
+                <!-- <img src="src/images/img-4.png" alt="foto 4"> -->
+            </div>
+
+            <div class="foto5">
+                <!-- <img src="src/images/img-5.png" alt="foto 5"> -->
+            </div>
+
+            <div class="foto6">
+                <!-- <img src="src/images/img-6.png" alt="foto 6"> -->
+            </div>
+
+            <div class="foto7">
+                <!-- <img src="src/images/img-7.png" alt="foto 7"> -->
+            </div>
+
+            <div class="foto8">
+                <!-- <img src="src/images/img-8.png" alt="foto 8"> -->
+            </div>
+
+            <div class="foto9">
+                <!-- <img src="src/images/img-9.png" alt="foto 9"> -->
+            </div>
+        </div>
+
+        <a href="#" class="btn">Learn More</a>
     </section>
 
     <section class="services" id="servicos">
