section services completada y reorganizacion de pasta css por cada section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/menu.css">
+    <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/hero.css">
+    <link rel="stylesheet" href="src/css/about.css">
+    <link rel="stylesheet" href="src/css/gallery.css">
+    <link rel="stylesheet" href="src/css/services.css">
+    <link rel="stylesheet" href="src/css/testimonials.css">
+    <link rel="stylesheet" href="src/css/footer.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -115,11 +122,37 @@
     </section>
 
     <section class="services" id="servicos">
+        <div class="informacoes">
+            <h2>Services</h2>
+            <p>Typesetting industry lorem Ipsum is simply dummy text of the</p>
+        </div>
 
+        <div class="cards">
+            <div class="card">
+                <img src="src/images/icon1.png" alt="icon1">
+                <h3>Original Coffee</h3>
+                <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <div class="card card2">
+                <img src="src/images/icon2.png" alt="icon2">
+                <h3>20 Coffee Flavors</h3>
+                <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <div class="card">
+                <img src="src/images/icon3.png" alt="icon3">
+                <h3>Pleasant Abient</h3>
+                <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+        </div>
     </section>
 
     <section class="testimonials">
-
+        <div class="container"></div>
     </section>
 
     <footer class="footer" id="contato">
