section testimonials concluida

--- a/index.html
+++ b/index.html
@@ -81,41 +81,23 @@
                 <h2>Nossa galeria</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quam tempore quas ad obcaecati maxime deleniti sed similique, ab cupiditate distinctio, vero mollitia quisquam dolorem at soluta debitis vel sapiente?</p>
             </div>
-            <div class="foto1">
-                <!-- <img src="src/images/img-1.png" alt="foto 1"> -->
-            </div>
+            <div class="foto1"></div>
 
-            <div class="foto2">
-                <!-- <img src="src/images/img-2.png" alt="foto 2"> -->
-            </div>
+            <div class="foto2"></div>
 
-            <div class="foto3">
-                <!-- <img src="src/images/img-3.png" alt="foto 3"> -->
-            </div>
+            <div class="foto3"></div>
 
-            <div class="foto4">
-                <!-- <img src="src/images/img-4.png" alt="foto 4"> -->
-            </div>
+            <div class="foto4"></div>
 
-            <div class="foto5">
-                <!-- <img src="src/images/img-5.png" alt="foto 5"> -->
-            </div>
+            <div class="foto5"></div>
 
-            <div class="foto6">
-                <!-- <img src="src/images/img-6.png" alt="foto 6"> -->
-            </div>
+            <div class="foto6"></div>
 
-            <div class="foto7">
-                <!-- <img src="src/images/img-7.png" alt="foto 7"> -->
-            </div>
+            <div class="foto7"></div>
 
-            <div class="foto8">
-                <!-- <img src="src/images/img-8.png" alt="foto 8"> -->
-            </div>
+            <div class="foto8"></div>
 
-            <div class="foto9">
-                <!-- <img src="src/images/img-9.png" alt="foto 9"> -->
-            </div>
+            <div class="foto9"></div>
         </div>
 
         <a href="#" class="btn">Learn More</a>
@@ -152,7 +134,29 @@
     </section>
 
     <section class="testimonials">
-        <div class="container"></div>
+        <div class="container">
+            <div class="informacoes">
+                <h2>Testemunhos</h2>
+                <p>Eeven slightly believable. If you are going to use a passage of Lorem Ipsum, you need to</p>
+            </div>
+
+            <div class="testemunhas">
+                <div class="testemunho1">
+                    <h2>Monila</h2>
+                    <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+                </div>
+
+                <div class="testemunho2">
+                    <h2>Monila</h2>
+                    <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+                </div>
+
+                <div class="testemunho3">
+                    <h2>Monila</h2>
+                    <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+                </div>  
+            </div>
+        </div>
     </section>
 
     <footer class="footer" id="contato">
