--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="src/css/font-awesome.min.css">
 </head>
 <body>
     <header class="header">
@@ -143,16 +145,19 @@
             <div class="testemunhas">
                 <div class="testemunho1">
                     <h2>Monila</h2>
+                    <i class="fas fa-quote-left"></i>
                     <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
                 </div>
 
                 <div class="testemunho2">
                     <h2>Monila</h2>
+                    <i class="fas fa-quote-left"></i>
                     <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
                 </div>
 
                 <div class="testemunho3">
                     <h2>Monila</h2>
+                    <i class="fas fa-quote-left"></i>
                     <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
                 </div>  
             </div>
