--- a/index.html
+++ b/index.html
@@ -165,7 +165,31 @@
     </section>
 
     <footer class="footer" id="contato">
-
+        <div class="container-footer">
+            <div class="footer-menu flex-1">
+                <h2>Menu</h2>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sobre">Sobre nos</a></li>
+                    <li><a href="#galeria">Galeria</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </div>
+            <div class="contact flex-1">
+                <h2>Contato</h2>
+                <ul>
+                    <li><a href="/"><i class="fas fa-map-marker-alt"></i>Address : Loram Ipsum</a></li>
+                    <li><a href="/"><i class="fas fa-phone-alt"></i>Call : +01 1234567890</a></li>
+                    <li><a href="/"><i class="fas fa-envelope"></i>Email : exemplo@gmail.com</a></li>
+                </ul>
+            </div>
+            <div class="about flex-1">
+                <h2>Sobre Nos</h2>
+                <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
+                <p style="color: red;">ajustar la velocidad del despliegue en los links de las secciones</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
