--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet">
 
     <link rel="stylesheet" href="src/css/font-awesome.min.css">
 </head>
@@ -135,10 +139,10 @@
         </div>
     </section>
 
-    <section class="testimonials">
+    <section class="testimonials" id="testemunhos">
         <div class="container">
             <div class="informacoes">
-                <h2>Testemunhos</h2>
+                <h2>Depoimentos</h2>
                 <p>Eeven slightly believable. If you are going to use a passage of Lorem Ipsum, you need to</p>
             </div>
 
@@ -166,17 +170,18 @@
 
     <footer class="footer" id="contato">
         <div class="container-footer">
-            <div class="footer-menu flex-1">
+            <div class="footer-menu">
                 <h2>Menu</h2>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#sobre">Sobre nos</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#testemunhos">Depoimentos</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </div>
-            <div class="contact flex-1">
+            <div class="contact">
                 <h2>Contato</h2>
                 <ul>
                     <li><a href="/"><i class="fas fa-map-marker-alt"></i>Address : Loram Ipsum</a></li>
@@ -184,10 +189,9 @@
                     <li><a href="/"><i class="fas fa-envelope"></i>Email : exemplo@gmail.com</a></li>
                 </ul>
             </div>
-            <div class="about flex-1">
+            <div class="about">
                 <h2>Sobre Nos</h2>
                 <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
-                <p style="color: red;">ajustar la velocidad del despliegue en los links de las secciones</p>
             </div>
         </div>
     </footer>
