section maps concluida, proyecto concluido

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cafeteria Gamma</title>
 
     <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/menu.css">
     <link rel="stylesheet" href="src/css/header.css">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="src/css/gallery.css">
     <link rel="stylesheet" href="src/css/services.css">
     <link rel="stylesheet" href="src/css/testimonials.css">
+    <link rel="stylesheet" href="src/css/contato-maps.css">
     <link rel="stylesheet" href="src/css/footer.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +30,7 @@
     <link rel="stylesheet" href="src/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="home">
         <div class="container">
             <a href="#"">
                 <h1 class="logo">Cafegamma</h1>
@@ -111,8 +113,8 @@
 
     <section class="services" id="servicos">
         <div class="informacoes">
-            <h2>Services</h2>
-            <p>Typesetting industry lorem Ipsum is simply dummy text of the</p>
+            <h2>Serviços</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, ad. Voluptates sapiente quas hic quam porro voluptas maiores quaerat dolore, dolorem laudantium inventore placeat beatae, quisquam necessitatibus, illo magni dicta.</p>
         </div>
 
         <div class="cards">
@@ -168,6 +170,22 @@
         </div>
     </section>
 
+    <section class="contato-maps">
+        <div class="contato">
+            <h2>Receba nossas promoçoes</h2>
+            <p>Inscreva-se para receber descontos exclusivos direto no seu e-mail!</p>
+            <div class="inputs">
+                <input type="text" name="nome" value="" id="nome" placeholder="Nome" class="input-text">
+                <input type="text" name="sobrenome" value="" id="sobrenome" placeholder="Sobrenome" class="input-text">
+                <input type="text" name="email" value="" id="email" placeholder="Email" class="input-text">
+                <input type="submit" value="Enviar" class="btn">
+            </div>
+        </div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.0429711112065!2d-59.134378446302144!3d-3.5775983123690307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92691dc0dd574313%3A0x9a1aefbba799657!2sAv.%2020%20de%20Dezembro%20-%20Autazes%2C%20AM%2C%2069240-000!5e0!3m2!1ses-419!2sbr!4v1720037930034!5m2!1ses-419!2sbr" width="600" height="520" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+         </div>
+    </section>
+
     <footer class="footer" id="contato">
         <div class="container-footer">
             <div class="footer-menu">
@@ -191,8 +209,11 @@
             </div>
             <div class="about">
                 <h2>Sobre Nos</h2>
-                <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, aspernatur non ratione perferendis eligendi ipsa consectetur enim saepe consequatur eos delectus reprehenderit minus porro vitae maxime temporibus iste doloribus voluptatem.</p>
             </div>
+        </div>
+        <div class="direitos-autorais">
+            <h5>2024 ® CAFEGAMMA – Todos os direitos reservados</h5>
         </div>
     </footer>
 </body>
