cambiando formato de imagenes para webp menos peso

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="image item5">
-                <img src="src/images/about-img.png" alt="sobre nos">
+                <img src="src/images/about-img.webp" alt="sobre nos">
             </div>
         </div>
     </section>
