nuevos ajustes que faltaban en el error anterior del width del map y otros ajustes en el responsivo de section about, gallery y services

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.0429711112065!2d-59.134378446302144!3d-3.5775983123690307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92691dc0dd574313%3A0x9a1aefbba799657!2sAv.%2020%20de%20Dezembro%20-%20Autazes%2C%20AM%2C%2069240-000!5e0!3m2!1ses-419!2sbr!4v1720037930034!5m2!1ses-419!2sbr" width="600" height="520" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.0429711112065!2d-59.134378446302144!3d-3.5775983123690307!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92691dc0dd574313%3A0x9a1aefbba799657!2sAv.%2020%20de%20Dezembro%20-%20Autazes%2C%20AM%2C%2069240-000!5e0!3m2!1ses-419!2sbr!4v1720037930034!5m2!1ses-419!2sbr" width="100%" height="520" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
     </section>
 
