--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="src/css/contato-maps.css">
     <link rel="stylesheet" href="src/css/footer.css">
 
+    <script src="./src/js/scrollreveal.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -46,11 +48,11 @@
                 </label>
                 
                 <ul>
-                    <li><a href="#home" id="home">Home</a></li>
-                    <li><a href="#sobre">Sobre nos</a></li>
-                    <li><a href="#galeria">Galeria</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li class="li1"><a href="#home" id="home">Home</a></li>
+                    <li class="li2"><a href="#sobre">Sobre nos</a></li>
+                    <li class="li3"><a href="#galeria">Galeria</a></li>
+                    <li class="li4"><a href="#servicos">Serviços</a></li>
+                    <li class="li5"><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -216,5 +218,7 @@
             <h5>2024 ® CAFEGAMMA – Todos os direitos reservados</h5>
         </div>
     </footer>
+
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
