animacion del about quitada del footer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </section>
 
-    <section class="about" id="sobre">
+    <section class="about about-animation" id="sobre">
         <div class="container">
             <div class="informacoes">
                 <h1 class="item1">Sobre Nos</h1>
